--- a/Ebook/OPS/css/main.css
+++ b/Ebook/OPS/css/main.css
@@ -27,10 +27,12 @@ p { /* Turn on hyphenation for paragraphs only. */
 /*  Shortcodes for page-break rules.
     Use data attributes to designate if and how the page should be broken before, inside or after an element.
 */
+
 h1, h2, h3, h4, h5, h6,
 table, img, figure, video,
 [data-page-break~=inside][data-page-break~=avoid] { page-break-inside:  avoid; }
 [data-page-break~=after]                          { page-break-after:  always; }
+h1, h2, h3, h4, h5, h6,
 [data-page-break~=after][data-page-break~=avoid]  { page-break-after:   avoid; }
 [data-page-break~=before]                         { page-break-before: always; }
 [data-page-break~=before][data-page-break~=avoid] { page-break-before:  avoid; }
