--- a/Ebook/OPS/css/main.css
+++ b/Ebook/OPS/css/main.css
@@ -6,6 +6,7 @@ body {
 }
 
 h1, h2 { /* Disable hyphenation for headings to avoid single-syllable-lines. */
+	  -epub-hyphens: none;
   -webkit-hyphens: none;
      -moz-hyphens: none;
           hyphens: none;
@@ -17,6 +18,7 @@ p, blockquote {
 }
 
 p { /* Turn on hyphenation for paragraphs only. */
+	  -epub-hyphens: auto;
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
           hyphens: auto;
