--- a/Ebook/OPS/css/main.css
+++ b/Ebook/OPS/css/main.css
@@ -1,7 +1,8 @@
+@charset "utf-8";
+
+@import '../fonts/fonts.css';
+
 @namespace epub 'http://www.idpf.org/2007/ops';
-
-
-@import "../fonts/fonts.css";
 
 /* Remove margin for WebKit-based reading systems.
 */
